<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/library"
        android:icon="@drawable/ic_local_library_black_24dp"
        android:title="Library"
        app:showAsAction="always"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/account"
        app:showAsAction="always" />
    <item
        android:id="@+id/take_note"
        android:icon="@drawable/ic_remove_red_eye_black_24dp"
        android:title="@string/take_note"
        app:showAsAction="always"/>
</menu>